[tool.poetry]
name = "ml-stack-pytorch-cu118"
version = "0.3.0"
description = "Composable PyTorch ML stack with CUDA 11.8 - lean base + optional groups"
authors = ["ML Frameworks Contributors cgpadwick@gmail.com"]
readme = "README.md"
packages = [{ include = "ml_stack_pytorch" }]
license = "MIT"
keywords = ["ml", "pytorch", "cuda", "transformers", "vision"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[tool.poetry.dependencies]
python = "^3.10,<3.13"

# ----- Base (always installed) -----
# PyTorch trio: always present so `import torch` works out of the box.
torch = {version = "2.3.1", source = "pytorch-cu118"}
torchvision = {version = "0.18.1", source = "pytorch-cu118"}
torchaudio = {version = "2.3.1", source = "pytorch-cu118"}
# Numerics + tabular ML + EDA toolkit
numpy = "<2.0.0"
scipy = "^1.11.0"
pandas = "^2.0.0"
scikit-learn = "^1.3.0"
joblib = "^1.3.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
# Small utilities
tqdm = "^4.66.0"
pydantic = "^2.4.0"
pyyaml = "^6.0.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
rich = "^13.0.0"
# Test tools (so post-install verification works without extras)
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

# ----- Optional groups -----

# training group - PyTorch ecosystem add-ons
pytorch-lightning = {version = "^2.1.0", optional = true}
lightning = {version = "^2.1.0", optional = true}
torchmetrics = {version = "^0.11.0", optional = true}
torchinfo = {version = "^1.8.0", optional = true}
tensorboard = {version = "^2.14.0", optional = true}
onnx = {version = "^1.14.0", optional = true}
onnxruntime = {version = "^1.16.0", optional = true}
triton = {version = "^2.1.0", optional = true}
einops = {version = "^0.7.0", optional = true}
optuna = {version = "^3.0.0", optional = true}
omegaconf = {version = "^2.3.0", optional = true}

# vision group - Basic computer vision
# Note: Use opencv-contrib-python only (includes all opencv-python features plus extra modules)
# Do NOT install both opencv-python and opencv-contrib-python - they conflict on the cv2 namespace
opencv-contrib-python = {version = "^4.8.0", optional = true}
scikit-image = {version = "^0.22.0", optional = true}
Pillow = {version = "^10.0.0", optional = true}
albumentations = {version = "^1.3.1", optional = true}

# vision-extra group - Advanced CV frameworks
ultralytics = {version = "^8.0.0", optional = true}
timm = {version = "^0.9.0", optional = true}

# nlp group - Core natural language processing
transformers = {version = "^4.35.0", optional = true}
datasets = {version = "^2.14.0", optional = true}
sentencepiece = {version = "^0.2.0", optional = true}
tokenizers = {version = "^0.14.0", optional = true}
peft = {version = "^0.7.0", optional = true}
accelerate = {version = "^0.24.0", optional = true}
evaluate = {version = "^0.4.0", optional = true}
sacrebleu = {version = "^2.4.0", optional = true}
rouge-score = {version = "^0.1.0", optional = true}

# viz group - Extra plotting backend (matplotlib + seaborn are in base)
plotly = {version = "^5.17.0", optional = true}

# data group - Data processing & ETL (sklearn is in base)
dask = {version = "^2023.0.0", optional = true}
polars = {version = "^0.19", optional = true}
pyarrow = {version = "^13.0.0", optional = true}

# gnn group - Graph neural networks (torch is in base, so this is just the GNN bits)
# Note: 2.5.0+ makes torch-scatter / torch-sparse / pyg-lib fully optional,
# so basic graph layers work with just torch installed.
torch-geometric = {version = "^2.5.0", optional = true}

[tool.poetry.group.dev.dependencies]
black = "^23.9.0"
ruff = "^0.10.0"
mypy = "^1.5.0"
pre-commit = "^3.4.0"

[tool.poetry.extras]
base = []
training = ["pytorch-lightning", "lightning", "torchmetrics", "torchinfo", "tensorboard", "onnx", "onnxruntime", "triton", "einops", "optuna", "omegaconf"]
vision = ["opencv-contrib-python", "scikit-image", "Pillow", "albumentations"]
vision-extra = ["ultralytics", "timm"]
nlp = ["transformers", "datasets", "sentencepiece", "tokenizers", "peft", "accelerate", "evaluate", "sacrebleu", "rouge-score"]
viz = ["plotly"]
data = ["dask", "polars", "pyarrow"]
gnn = ["torch-geometric"]
all = ["pytorch-lightning", "lightning", "torchmetrics", "torchinfo", "tensorboard", "onnx", "onnxruntime", "triton", "einops", "optuna", "omegaconf", "opencv-contrib-python", "scikit-image", "Pillow", "albumentations", "ultralytics", "timm", "transformers", "datasets", "sentencepiece", "tokenizers", "peft", "accelerate", "evaluate", "sacrebleu", "rouge-score", "plotly", "dask", "polars", "pyarrow", "torch-geometric"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
