[tool.poetry]
name = "ml-stack-pytorch"
version = "0.2.0"
description = "Composable PyTorch ML stack with CUDA 12.1 - install only what you need"
authors = ["ML Frameworks Contributors cgpadwick@gmail.com"]
readme = "README.md"
license = "MIT"
keywords = ["ml", "pytorch", "cuda", "transformers", "vision"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[tool.poetry.dependencies]
python = "^3.10,<3.13"

# Base dependencies - always installed
numpy = "<2.0.0"
scipy = "^1.11.0"
pandas = "^2.0.0"
tqdm = "^4.66.0"
pydantic = "^2.4.0"
pyyaml = "^6.0.0"
python-dotenv = "^1.0.0"

# ML group - Core machine learning
torch = {version = "2.3.1", source = "pytorch-cu121", optional = true}
torchvision = {version = "0.18.1", source = "pytorch-cu121", optional = true}
torchaudio = {version = "2.3.1", source = "pytorch-cu121", optional = true}
pytorch-lightning = {version = "^2.1.0", optional = true}
lightning = {version = "^2.1.0", optional = true}
torchmetrics = {version = "^1.8.2", optional = true}
torchinfo = {version = "^1.8.0", optional = true}
tensorboard = {version = "^2.14.0", optional = true}
onnx = {version = "^1.14.0", optional = true}
onnxruntime = {version = "^1.16.0", optional = true}
triton = {version = "^2.1.0", optional = true}
einops = {version = "^0.7.0", optional = true}
optuna = {version = "^3.0.0", optional = true}
omegaconf = {version = "^2.3.0", optional = true}

# Vision group - Basic computer vision
opencv-python = {version = "^4.8.0", optional = true}
opencv-contrib-python = {version = "^4.8.0", optional = true}
scikit-image = {version = "^0.22.0", optional = true}
Pillow = {version = "^10.0.0", optional = true}
albumentations = {version = "^1.3.1", optional = true}

# Vision-extra group - Advanced CV frameworks
ultralytics = {version = "^8.0.0", optional = true}
timm = {version = "^0.9.0", optional = true}

# NLP group - Core natural language processing
transformers = {version = "^4.35.0", optional = true}
datasets = {version = "^2.14.0", optional = true}
sentencepiece = {version = "^0.2.0", optional = true}
tokenizers = {version = "^0.14.0", optional = true}
peft = {version = "^0.7.0", optional = true}
accelerate = {version = "^0.24.0", optional = true}
evaluate = {version = "^0.4.0", optional = true}
sacrebleu = {version = "^2.4.0", optional = true}
rouge-score = {version = "^0.1.0", optional = true}

# NLP-train group - NLP training utilities
trl = {version = "^0.7.0", optional = true}
bitsandbytes = {version = "^0.41.0", optional = true}
deepspeed = {version = "^0.12.0", optional = true}

# Viz group - Visualization & dashboards
matplotlib = {version = "^3.8.0", optional = true}
seaborn = {version = "^0.13.0", optional = true}
plotly = {version = "^5.17.0", optional = true}
bokeh = {version = "^3.3.0", optional = true}
streamlit = {version = "^1.28.0", optional = true}
dash = {version = "^2.14.0", optional = true}
gradio = {version = "^4.0.0", optional = true}
jupyter = {version = "^1.0.0", optional = true}
ipython = {version = "^8.16.0", optional = true}

# Data group - Data processing & ETL
dask = {version = "^2023.0.0", optional = true}
polars = {version = "^0.19", optional = true}
pyarrow = {version = "^13.0.0", optional = true}
scikit-learn = {version = "^1.3.0", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.9.0"
ruff = "^0.10.0"
mypy = "^1.5.0"
pre-commit = "^3.4.0"

[tool.poetry.extras]
base = []
ml = ["torch", "torchvision", "torchaudio", "pytorch-lightning", "lightning", "torchmetrics", "torchinfo", "tensorboard", "onnx", "onnxruntime", "triton", "einops", "optuna", "omegaconf"]
vision = ["opencv-python", "opencv-contrib-python", "scikit-image", "Pillow", "albumentations"]
vision-extra = ["ultralytics", "timm"]
nlp = ["transformers", "datasets", "sentencepiece", "tokenizers", "peft", "accelerate", "evaluate", "sacrebleu", "rouge-score"]
nlp-train = ["trl", "bitsandbytes", "deepspeed"]
viz = ["matplotlib", "seaborn", "plotly", "bokeh", "streamlit", "dash", "gradio", "jupyter", "ipython"]
data = ["dask", "polars", "pyarrow", "scikit-learn"]
all = ["torch", "torchvision", "torchaudio", "pytorch-lightning", "lightning", "torchmetrics", "torchinfo", "tensorboard", "onnx", "onnxruntime", "triton", "einops", "optuna", "omegaconf", "opencv-python", "opencv-contrib-python", "scikit-image", "Pillow", "albumentations", "ultralytics", "timm", "transformers", "datasets", "sentencepiece", "tokenizers", "peft", "accelerate", "evaluate", "sacrebleu", "rouge-score", "trl", "bitsandbytes", "deepspeed", "matplotlib", "seaborn", "plotly", "bokeh", "streamlit", "dash", "gradio", "jupyter", "ipython", "dask", "polars", "pyarrow", "scikit-learn"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
