[tool.poetry]
name = "ml-stack-pytorch-cu130"
version = "0.1.0"
description = "Composable PyTorch ML stack with CUDA 13.0 - install only what you need (Blackwell/GB10 support)"
authors = ["ML Frameworks Contributors cgpadwick@gmail.com"]
readme = "README.md"
packages = [{ include = "ml_stack_pytorch" }]
license = "MIT"
keywords = ["ml", "pytorch", "cuda", "transformers", "vision", "blackwell", "dgx-spark"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
priority = "explicit"

[tool.poetry.dependencies]
python = "^3.10,<3.13"

# Base dependencies - always installed
numpy = "<2.0.0"
scipy = "^1.11.0"
pandas = "^2.0.0"
tqdm = "^4.66.0"
pydantic = "^2.4.0"
pyyaml = "^6.0.0"
python-dotenv = "^1.0.0"
# Core ML utilities (table-stakes for any tabular ML / EDA workflow)
scikit-learn = "^1.3.0"
joblib = "^1.3.0"
requests = "^2.31.0"
rich = "^13.0.0"
# Plotting trio (standard EDA toolkit - small, broadly used)
matplotlib = "^3.8.0"
seaborn = "^0.13.0"

# ML group - Core machine learning
torch = {version = "2.10.0", source = "pytorch-cu130", optional = true}
torchvision = {version = "0.25.0", source = "pytorch-cu130", optional = true}
torchaudio = {version = "2.10.0", source = "pytorch-cu130", optional = true}
pytorch-lightning = {version = "^2.1.0", optional = true}
lightning = {version = "^2.1.0", optional = true}
torchmetrics = {version = "^0.11.0", optional = true}
torchinfo = {version = "^1.8.0", optional = true}
tensorboard = {version = "^2.14.0", optional = true}
onnx = {version = "^1.14.0", optional = true}
onnxruntime = {version = "^1.16.0", optional = true}
# Note: triton version should match PyTorch 2.9.x expectations
triton = {version = "^3.0.0", optional = true}
einops = {version = "^0.7.0", optional = true}
optuna = {version = "^3.0.0", optional = true}
omegaconf = {version = "^2.3.0", optional = true}

# Vision group - Basic computer vision
# Note: Use opencv-contrib-python only (includes all opencv-python features plus extra modules)
# Do NOT install both opencv-python and opencv-contrib-python - they conflict on the cv2 namespace
opencv-contrib-python = {version = "^4.8.0", optional = true}
scikit-image = {version = "^0.22.0", optional = true}
Pillow = {version = "^10.0.0", optional = true}
albumentations = {version = "^1.3.1", optional = true}

# Vision-extra group - Advanced CV frameworks
ultralytics = {version = "^8.0.0", optional = true}
timm = {version = "^0.9.0", optional = true}

# NLP group - Core natural language processing
transformers = {version = "^4.35.0", optional = true}
datasets = {version = "^2.14.0", optional = true}
sentencepiece = {version = "^0.2.0", optional = true}
tokenizers = {version = "^0.14.0", optional = true}
peft = {version = "^0.7.0", optional = true}
accelerate = {version = "^0.24.0", optional = true}
evaluate = {version = "^0.4.0", optional = true}
sacrebleu = {version = "^2.4.0", optional = true}
rouge-score = {version = "^0.1.0", optional = true}

# NLP-train group - NLP training utilities
# Note: bitsandbytes and deepspeed may have limited aarch64+cu130 support
trl = {version = "^0.7.11", optional = true}
bitsandbytes = {version = "^0.49.0", optional = true}
deepspeed = {version = "^0.18.0", optional = true}

# Viz group - Optional plotting backend (matplotlib + seaborn are in base)
plotly = {version = "^5.17.0", optional = true}

# Viz-app group - Dashboard / notebook tooling (heavy, opt-in)
bokeh = {version = "^3.3.0", optional = true}
streamlit = {version = "^1.28.0", optional = true}
dash = {version = "^2.14.0", optional = true}
gradio = {version = "^4.0.0", optional = true}
jupyter = {version = "^1.0.0", optional = true}
ipython = {version = "^8.16.0", optional = true}

# Data group - Data processing & ETL (sklearn is in base)
dask = {version = "^2023.0.0", optional = true}
polars = {version = "^0.19", optional = true}
pyarrow = {version = "^14.0.0", optional = true}

# GNN group - Graph neural networks (heavyweight, opt-in)
# Note: 2.5.0+ makes torch-scatter / torch-sparse / pyg-lib fully optional,
# so basic graph layers work with just torch installed.
torch-geometric = {version = "^2.5.0", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.9.0"
ruff = "^0.10.0"
mypy = "^1.5.0"
pre-commit = "^3.4.0"

[tool.poetry.extras]
base = []
ml = ["torch", "torchvision", "torchaudio", "pytorch-lightning", "lightning", "torchmetrics", "torchinfo", "tensorboard", "onnx", "onnxruntime", "triton", "einops", "optuna", "omegaconf"]
vision = ["opencv-contrib-python", "scikit-image", "Pillow", "albumentations"]
vision-extra = ["ultralytics", "timm"]
nlp = ["transformers", "datasets", "sentencepiece", "tokenizers", "peft", "accelerate", "evaluate", "sacrebleu", "rouge-score"]
nlp-train = ["trl", "bitsandbytes", "deepspeed"]
viz = ["plotly"]
viz-app = ["bokeh", "streamlit", "dash", "gradio", "jupyter", "ipython"]
data = ["dask", "polars", "pyarrow"]
gnn = ["torch", "torchvision", "torchaudio", "torch-geometric"]
all = ["torch", "torchvision", "torchaudio", "pytorch-lightning", "lightning", "torchmetrics", "torchinfo", "tensorboard", "onnx", "onnxruntime", "triton", "einops", "optuna", "omegaconf", "opencv-contrib-python", "scikit-image", "Pillow", "albumentations", "ultralytics", "timm", "transformers", "datasets", "sentencepiece", "tokenizers", "peft", "accelerate", "evaluate", "sacrebleu", "rouge-score", "trl", "bitsandbytes", "deepspeed", "plotly", "bokeh", "streamlit", "dash", "gradio", "jupyter", "ipython", "dask", "polars", "pyarrow", "torch-geometric"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
